--- a/YourPett/YourPett.csproj
+++ b/YourPett/YourPett.csproj
@@ -65,4 +65,8 @@
       <None Include="Pages\Login.razor" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    </ItemGroup>
+
 </Project>
